030-software/fluxcd/apps/motrix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: motrix
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: motrix
  type: ClusterIP
