030-software/fluxcd/apps/motrix/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: motrix
spec:
  hostnames:
  - motrix.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: motrix
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
